[Bugfix] ScrollBars now show.

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -15,14 +15,15 @@ body ul{
 
 /* Background Styles */
 
+/*	
 .full_background {
-/*	position:fixed; */
+	position:fixed;
 	width:100%;
 	height:100%;
 	min-height:900px;
-}
+}  */
 
-#pages_index .full_background {
+#pages_index {
 		background: #000 url('bg_escalator_green.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
 	    -moz-background-size: cover;
@@ -30,7 +31,7 @@ body ul{
 	    background-size: cover;
 }
 
-#orders_new .full_background {
+#orders_new  {
 		background: #000 url('bg_exit.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
 	    -moz-background-size: cover;
@@ -38,7 +39,7 @@ body ul{
 	    background-size: cover;
 }
 
-#pages_contact .full_background {
+#pages_contact {
 		background: #000 url('bg_exit.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
 	    -moz-background-size: cover;
@@ -46,7 +47,7 @@ body ul{
 	    background-size: cover;
 }
 
-#shoes_index .full_background {
+#shoes_index {
 		background:#000 url('bg_escalator_green.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
 	    -moz-background-size: cover;
@@ -54,7 +55,7 @@ body ul{
 	    background-size: cover;
 }
 
-#shoes_show .full_background {
+#shoes_show {
 		background: #000 url('bg_escalator_green.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
 	    -moz-background-size: cover;
@@ -62,7 +63,7 @@ body ul{
 	    background-size: cover;
 }
 
-#shoes_trend .full_background {
+#shoes_trend {
 		background: #000 url('bg_city.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
 	    -moz-background-size: cover;
